# assignment03_crewai_latex_book

./: .env.example  .gitignore  PROJECT_INSTRUCTIONS.md  README.md  plan.md  prd.md  pyproject.toml  requirements.txt  todo.md
content/: draft.md  final_article.md  tables_formulas.md
latex/: main.tex  references.bib
results/: compile_log.txt
src/: __init__.py  config.py  main.py  validators.py
src/agents/: __init__.py  definitions.py
src/pipeline/: __init__.py  asset_validator.py  content_validator.py  crew_builder.py  graph_generator.py  latex_body.py  latex_builder.py  latex_ch_closing.py  latex_ch_pipeline.py  latex_ch_problem.py  latex_ch_response.py  latex_frontmatter.py  latex_preamble.py  latex_references.py  latex_validator.py  markdown_pipeline.py  pdf_compiler.py  pdf_validator.py  sections.py  technical_assets.py
src/tasks/: __init__.py  definitions.py
