[project]
name = "assignment03-crewai-latex-book"
version = "0.1.0"
description = "A CrewAI multi-agent system that researches, writes, illustrates, reviews, and typesets a ~15-page bilingual academic article into a LuaLaTeX-compiled PDF (Course 203.3763, Assignment 03)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "awawdyamal04", email = "awawdyamal@gmail.com" },
]
keywords = ["crewai", "ai-agents", "latex", "lualatex", "multi-agent", "academic-writing"]

dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "pydantic>=2.6.0",
]

[project.urls]
Repository = "https://github.com/awawdyamal04/assignment03_crewai_latex_book"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
